--- a/OrangeFun/首页/View/分类故事/CategoryStoryViewCell.xib
+++ b/OrangeFun/首页/View/分类故事/CategoryStoryViewCell.xib
@@ -40,9 +40,9 @@
                                 </constraints>
                             </imageView>
                             <button opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="right" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FLP-Y3-VtB">
-                                <rect key="frame" x="225" y="9.5" width="60" height="35"/>
+                                <rect key="frame" x="165" y="0.0" width="120" height="54"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="60" id="n8g-sc-58u"/>
+                                    <constraint firstAttribute="width" constant="120" id="n8g-sc-58u"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" name="PingFangHK-Regular" family="PingFang HK" pointSize="16"/>
                                 <state key="normal" title="更多">
@@ -62,6 +62,8 @@
                             <constraint firstItem="ned-rc-47y" firstAttribute="leading" secondItem="Rb4-Zh-DKZ" secondAttribute="leading" constant="10" id="8cB-0h-bav"/>
                             <constraint firstItem="Pbi-Qy-2Gc" firstAttribute="centerY" secondItem="ned-rc-47y" secondAttribute="centerY" id="9Ay-6p-vLx"/>
                             <constraint firstAttribute="trailing" secondItem="Pbi-Qy-2Gc" secondAttribute="trailing" constant="19" id="Cci-Io-nIL"/>
+                            <constraint firstAttribute="bottom" secondItem="FLP-Y3-VtB" secondAttribute="bottom" id="YDw-Xc-PK7"/>
+                            <constraint firstItem="FLP-Y3-VtB" firstAttribute="top" secondItem="Rb4-Zh-DKZ" secondAttribute="top" id="r4H-8b-2IF"/>
                         </constraints>
                     </view>
                     <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" bounces="NO" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" bouncesZoom="NO" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="4V7-uw-hut">
