--- a/OrangeFun/Base.lproj/Main.storyboard
+++ b/OrangeFun/Base.lproj/Main.storyboard
@@ -69,7 +69,7 @@
         <!--播放-->
         <scene sceneID="sXX-oi-fnw">
             <objects>
-                <viewController id="L4c-lf-ngC" customClass="PlayViewController" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="playviewcontroller" id="L4c-lf-ngC" customClass="PlayViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="3uM-JO-ics"/>
                         <viewControllerLayoutGuide type="bottom" id="qgb-YD-FLp"/>
@@ -165,6 +165,17 @@
                                     <constraint firstAttribute="height" constant="2" id="DrE-YN-FXT"/>
                                 </constraints>
                             </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8F7-xF-1hh">
+                                <rect key="frame" x="16" y="31" width="70" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="BOd-Tb-PXc"/>
+                                    <constraint firstAttribute="width" constant="70" id="DTe-6D-pml"/>
+                                </constraints>
+                                <state key="normal" image="back_white"/>
+                                <connections>
+                                    <action selector="backAction:" destination="L4c-lf-ngC" eventType="touchUpInside" id="Xhv-Ge-pCK"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
@@ -176,6 +187,7 @@
                             <constraint firstItem="YQc-gV-FfU" firstAttribute="leading" secondItem="M0c-zk-qDf" secondAttribute="trailing" constant="60" id="7Vz-db-XOe"/>
                             <constraint firstItem="Uz8-IG-pSk" firstAttribute="leading" secondItem="YQc-gV-FfU" secondAttribute="trailing" constant="60" id="AeM-xz-AMe"/>
                             <constraint firstItem="DZT-5O-WbZ" firstAttribute="centerY" secondItem="vxN-YG-Bcd" secondAttribute="centerY" id="Cv4-cS-dsE"/>
+                            <constraint firstItem="8F7-xF-1hh" firstAttribute="leading" secondItem="3gH-ue-qZz" secondAttribute="leading" constant="16" id="FWy-6j-zTZ"/>
                             <constraint firstItem="Ods-bp-OXW" firstAttribute="centerX" secondItem="3gH-ue-qZz" secondAttribute="centerX" id="H9W-55-Mwu"/>
                             <constraint firstItem="DzS-vd-o72" firstAttribute="top" secondItem="GTD-cq-az3" secondAttribute="bottom" constant="30" id="KSS-sN-55D"/>
                             <constraint firstItem="vxN-YG-Bcd" firstAttribute="leading" secondItem="C9W-cG-ogN" secondAttribute="trailing" constant="6" id="MFW-cd-Kjl"/>
@@ -186,6 +198,7 @@
                             <constraint firstItem="GTD-cq-az3" firstAttribute="leading" secondItem="3gH-ue-qZz" secondAttribute="leading" id="SNB-go-uiS"/>
                             <constraint firstItem="fo4-QG-I76" firstAttribute="centerX" secondItem="vxN-YG-Bcd" secondAttribute="centerX" id="VqX-fj-RuU"/>
                             <constraint firstItem="DzS-vd-o72" firstAttribute="centerX" secondItem="3gH-ue-qZz" secondAttribute="centerX" id="WfH-e6-xDA"/>
+                            <constraint firstItem="8F7-xF-1hh" firstAttribute="centerY" secondItem="Ods-bp-OXW" secondAttribute="centerY" id="ZYc-Ds-EWi"/>
                             <constraint firstItem="Uz8-IG-pSk" firstAttribute="centerY" secondItem="YQc-gV-FfU" secondAttribute="centerY" id="dpj-qU-MoB"/>
                             <constraint firstItem="uad-OY-bCb" firstAttribute="centerY" secondItem="fo4-QG-I76" secondAttribute="centerY" id="fFC-6i-bjv"/>
                             <constraint firstItem="DzS-vd-o72" firstAttribute="width" secondItem="3gH-ue-qZz" secondAttribute="width" multiplier="0.6" id="hYl-dU-Cm0"/>
@@ -198,6 +211,7 @@
                     <tabBarItem key="tabBarItem" title="播放" id="N8Y-yo-Uzo"/>
                     <nil key="simulatedTopBarMetrics"/>
                     <connections>
+                        <outlet property="backBtn" destination="8F7-xF-1hh" id="yxj-Mj-hhf"/>
                         <outlet property="coverDiskImageView" destination="DzS-vd-o72" id="GFu-jk-G7L"/>
                         <outlet property="nextButton" destination="Uz8-IG-pSk" id="Rjr-4X-ajb"/>
                         <outlet property="playControlButton" destination="YQc-gV-FfU" id="3wB-1c-J41"/>
@@ -260,7 +274,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lC4-OG-Wwm">
+                            <view tag="1" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lC4-OG-Wwm">
                                 <rect key="frame" x="0.0" y="64" width="375" height="88"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1f4-fS-Om8">
@@ -347,63 +361,21 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="koI-dW-zdJ">
-                                <rect key="frame" x="0.0" y="64" width="375" height="60"/>
-                                <subviews>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MtR-xy-jP5">
-                                        <rect key="frame" x="0.0" y="59" width="375" height="1"/>
-                                        <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="1" id="KCP-lv-M4u"/>
-                                        </constraints>
-                                    </view>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="共10个故事" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="W0q-xH-Q5z">
-                                        <rect key="frame" x="8" y="18.5" width="85.5" height="24"/>
-                                        <fontDescription key="fontDescription" name="PingFangHK-Regular" family="PingFang HK" pointSize="17"/>
-                                        <color key="textColor" red="0.13333333333333333" green="0.13333333333333333" blue="0.13333333333333333" alpha="1" colorSpace="calibratedRGB"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ure-bb-5lT">
-                                        <rect key="frame" x="299" y="12" width="68" height="36"/>
-                                        <fontDescription key="fontDescription" name="PingFangHK-Regular" family="PingFang HK" pointSize="17"/>
-                                        <state key="normal" title="全部添加">
-                                            <color key="titleColor" red="0.13333333333333333" green="0.13333333333333333" blue="0.13333333333333333" alpha="1" colorSpace="calibratedRGB"/>
-                                        </state>
-                                    </button>
-                                </subviews>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="60" id="CX5-zH-P4D"/>
-                                    <constraint firstItem="W0q-xH-Q5z" firstAttribute="leading" secondItem="koI-dW-zdJ" secondAttribute="leading" constant="8" id="HsA-4O-HDS"/>
-                                    <constraint firstItem="ure-bb-5lT" firstAttribute="centerY" secondItem="koI-dW-zdJ" secondAttribute="centerY" id="IUW-Gb-nuw"/>
-                                    <constraint firstAttribute="trailing" secondItem="ure-bb-5lT" secondAttribute="trailing" constant="8" id="JJB-9w-20N"/>
-                                    <constraint firstAttribute="bottom" secondItem="MtR-xy-jP5" secondAttribute="bottom" id="ZTG-7Y-eeF"/>
-                                    <constraint firstAttribute="trailing" secondItem="MtR-xy-jP5" secondAttribute="trailing" id="cr6-Is-xJF"/>
-                                    <constraint firstItem="MtR-xy-jP5" firstAttribute="leading" secondItem="koI-dW-zdJ" secondAttribute="leading" id="oSP-6J-Ozy"/>
-                                    <constraint firstItem="ure-bb-5lT" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="koI-dW-zdJ" secondAttribute="leading" constant="20" symbolic="YES" id="xX9-0c-UEp"/>
-                                    <constraint firstItem="W0q-xH-Q5z" firstAttribute="centerY" secondItem="koI-dW-zdJ" secondAttribute="centerY" id="xt9-ZP-TDZ"/>
-                                    <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="W0q-xH-Q5z" secondAttribute="trailing" constant="20" symbolic="YES" id="yc8-7N-lUt"/>
-                                </constraints>
-                            </view>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="YAS-r8-PlS">
-                                <rect key="frame" x="0.0" y="124" width="375" height="543"/>
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="YAS-r8-PlS" firstAttribute="leading" secondItem="nnP-lj-Yle" secondAttribute="leading" id="BRd-m2-4Wu"/>
-                            <constraint firstItem="koI-dW-zdJ" firstAttribute="top" secondItem="597-xf-3cD" secondAttribute="bottom" id="RaV-xQ-NTQ"/>
-                            <constraint firstItem="koI-dW-zdJ" firstAttribute="leading" secondItem="nnP-lj-Yle" secondAttribute="leading" id="XYT-XP-Ohd"/>
+                            <constraint firstItem="YAS-r8-PlS" firstAttribute="top" secondItem="597-xf-3cD" secondAttribute="bottom" id="apb-Gs-XNO"/>
                             <constraint firstAttribute="trailing" secondItem="YAS-r8-PlS" secondAttribute="trailing" id="nsl-SR-FgP"/>
                             <constraint firstItem="ZFv-pv-07J" firstAttribute="top" secondItem="YAS-r8-PlS" secondAttribute="bottom" id="vL2-mU-JGB"/>
-                            <constraint firstItem="YAS-r8-PlS" firstAttribute="top" secondItem="koI-dW-zdJ" secondAttribute="bottom" id="wVi-kl-gej"/>
-                            <constraint firstAttribute="trailing" secondItem="koI-dW-zdJ" secondAttribute="trailing" id="xl8-AY-54P"/>
                         </constraints>
                     </view>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <connections>
-                        <outlet property="storyCountLabel" destination="W0q-xH-Q5z" id="mqv-y1-O5o"/>
                         <outlet property="storyListTable" destination="YAS-r8-PlS" id="fgN-Fd-yGj"/>
                     </connections>
                 </viewController>
@@ -492,52 +464,20 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="C8b-1c-6Xe">
-                                <rect key="frame" x="0.0" y="124" width="375" height="543"/>
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </tableView>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2XJ-yb-0PQ">
-                                <rect key="frame" x="0.0" y="64" width="375" height="60"/>
-                                <subviews>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5hC-nL-aRx">
-                                        <rect key="frame" x="0.0" y="59" width="375" height="1"/>
-                                        <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="1" id="lJh-RW-zlC"/>
-                                        </constraints>
-                                    </view>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="无内容" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RtZ-Lh-5n9">
-                                        <rect key="frame" x="8" y="18.5" width="51" height="24"/>
-                                        <fontDescription key="fontDescription" name="PingFangHK-Regular" family="PingFang HK" pointSize="17"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                </subviews>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <constraints>
-                                    <constraint firstItem="5hC-nL-aRx" firstAttribute="leading" secondItem="2XJ-yb-0PQ" secondAttribute="leading" id="3sA-fm-cZD"/>
-                                    <constraint firstItem="RtZ-Lh-5n9" firstAttribute="centerY" secondItem="2XJ-yb-0PQ" secondAttribute="centerY" id="JIH-Zs-v2B"/>
-                                    <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="RtZ-Lh-5n9" secondAttribute="trailing" constant="20" symbolic="YES" id="NEF-hs-yof"/>
-                                    <constraint firstAttribute="bottom" secondItem="5hC-nL-aRx" secondAttribute="bottom" id="Oet-Ht-exH"/>
-                                    <constraint firstItem="RtZ-Lh-5n9" firstAttribute="leading" secondItem="2XJ-yb-0PQ" secondAttribute="leading" constant="8" id="dgv-k2-6v5"/>
-                                    <constraint firstAttribute="height" constant="60" id="lxg-ie-M6N"/>
-                                    <constraint firstAttribute="trailing" secondItem="5hC-nL-aRx" secondAttribute="trailing" id="ynx-XC-H2s"/>
-                                </constraints>
-                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="2XJ-yb-0PQ" firstAttribute="top" secondItem="F5p-xx-Tdb" secondAttribute="bottom" id="8f7-vy-KWx"/>
                             <constraint firstItem="8xy-8C-nFv" firstAttribute="top" secondItem="C8b-1c-6Xe" secondAttribute="bottom" id="Cmk-GE-rol"/>
                             <constraint firstAttribute="trailing" secondItem="C8b-1c-6Xe" secondAttribute="trailing" id="E6Z-bR-WHA"/>
                             <constraint firstItem="C8b-1c-6Xe" firstAttribute="leading" secondItem="cf3-JU-1iF" secondAttribute="leading" id="FSP-sQ-S8t"/>
-                            <constraint firstItem="2XJ-yb-0PQ" firstAttribute="leading" secondItem="cf3-JU-1iF" secondAttribute="leading" id="N2E-IR-h2j"/>
-                            <constraint firstAttribute="trailing" secondItem="2XJ-yb-0PQ" secondAttribute="trailing" id="WGq-DG-vJT"/>
-                            <constraint firstItem="C8b-1c-6Xe" firstAttribute="top" secondItem="2XJ-yb-0PQ" secondAttribute="bottom" id="vG7-fG-KOC"/>
+                            <constraint firstItem="C8b-1c-6Xe" firstAttribute="top" secondItem="F5p-xx-Tdb" secondAttribute="bottom" id="uT8-i7-UzK"/>
                         </constraints>
                     </view>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <connections>
-                        <outlet property="resulText" destination="RtZ-Lh-5n9" id="beg-IW-H5z"/>
                         <outlet property="searchResultTable" destination="C8b-1c-6Xe" id="v5a-tg-bFk"/>
                     </connections>
                 </viewController>
@@ -567,6 +507,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="back_white" width="11" height="17"/>
         <image name="btnPlay" width="53" height="53"/>
         <image name="disk" width="180" height="180"/>
         <image name="fav" width="24" height="24"/>
